--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@astrolib/analytics": "^0.6.1",
     "@astrolib/seo": "^1.0.0-beta.8",
     "@fontsource-variable/inter": "^5.2.5",
+    "@fontsource-variable/montserrat": "^5.2.5",
+    "@fontsource-variable/roboto": "^5.2.5",
+    "@fontsource/kaisei-decol": "^5.2.5",
     "astro": "^5.5.2",
     "astro-embed": "^0.9.0",
     "astro-icon": "^1.1.5",
@@ -41,6 +44,7 @@
     "@astrojs/tailwind": "^5.1.5",
     "@eslint/js": "^9.22.0",
     "@iconify-json/flat-color-icons": "^1.2.1",
+    "@iconify-json/material-symbols-light": "^1.2.18",
     "@iconify-json/tabler": "^1.2.17",
     "@tailwindcss/typography": "^0.5.16",
     "@types/js-yaml": "^4.0.9",
