--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@astrolib/seo": "^1.0.0-beta.8",
     "@fontsource-variable/inter": "^5.2.5",
     "@fontsource-variable/montserrat": "^5.2.5",
+    "@fontsource-variable/playfair-display": "^5.2.5",
     "@fontsource-variable/roboto": "^5.2.5",
     "@fontsource/kaisei-decol": "^5.2.5",
     "astro": "^5.5.2",
